// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion headers close panes 1`] = `
<blaze-accordion
  class="hydrated"
>
  
              
  <blaze-accordion-pane
    class="hydrated"
    header="Click me"
  >
    
                This is an accordion
              
    <div
      class="c-card__item c-card__item--title"
    >
      Click me
    </div>
    <div
      class="c-card__item c-card__item--pane"
    />
  </blaze-accordion-pane>
  
              
  <blaze-accordion-pane
    class="hydrated"
    header="Click me also"
  >
    
                To toggle other panes
                
    <div
      class="c-card__item c-card__item--title"
    >
      Click me also
    </div>
    <div
      class="c-card__item c-card__item--pane"
    />
  </blaze-accordion-pane>
  
            
  <div
    class="c-text c-card c-card--accordion"
  />
</blaze-accordion>
`;

exports[`Accordion headers open panes 1`] = `
<blaze-accordion
  class="hydrated"
>
  
              
  <blaze-accordion-pane
    class="hydrated"
    header="Click me"
  >
    
                This is an accordion
              
    <div
      class="c-card__item c-card__item--title c-card__item--active"
    >
      Click me
    </div>
    <div
      class="c-card__item c-card__item--pane"
    />
  </blaze-accordion-pane>
  
              
  <blaze-accordion-pane
    class="hydrated"
    header="Click me also"
  >
    
                To toggle other panes
                
    <div
      class="c-card__item c-card__item--title"
    >
      Click me also
    </div>
    <div
      class="c-card__item c-card__item--pane"
    />
  </blaze-accordion-pane>
  
            
  <div
    class="c-text c-card c-card--accordion"
  />
</blaze-accordion>
`;

exports[`Accordion renders an emtpy accordion 1`] = `
<blaze-accordion
  class="hydrated"
>
  <div
    class="c-text c-card c-card--accordion"
  />
</blaze-accordion>
`;

exports[`Accordion renders two headers and two panes 1`] = `
<blaze-accordion
  class="hydrated"
>
  
        
  <blaze-accordion-pane
    class="hydrated"
    header="Click me"
  >
    
          This is an accordion
        
    <div
      class="c-card__item c-card__item--title"
    >
      Click me
    </div>
    <div
      class="c-card__item c-card__item--pane"
    />
  </blaze-accordion-pane>
  
        
  <blaze-accordion-pane
    class="hydrated"
    header="Click me also"
  >
    
          To toggle other panes
          
    <div
      class="c-card__item c-card__item--title"
    >
      Click me also
    </div>
    <div
      class="c-card__item c-card__item--pane"
    />
  </blaze-accordion-pane>
  
      
  <div
    class="c-text c-card c-card--accordion"
  />
</blaze-accordion>
`;
